csps-course-catalogue/csps-course-catalogue-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: csps-course-catalogue
  name: csps-course-catalogue
  namespace: catalogue
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    run: csps-course-catalogue
  type: NodePort
